--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "2.6.10"
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
     "> 1%",
